--- a/agent-ai/src/main/resources/application.yaml
+++ b/agent-ai/src/main/resources/application.yaml
@@ -1,10 +1,15 @@
 spring:
   application:
     name: agent-ai
+data:
+  mongodb:
+    url: mongodb://localhost:27017/chat_memory_db
 
 server:
   port: 8080
 
+client:
+  url: http://localhost:4200
 
 ollama:
   model: llama3.2
