--- a/agent-ai/build.gradle
+++ b/agent-ai/build.gradle
@@ -26,6 +26,9 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-webmvc'
+	implementation 'org.mapstruct:mapstruct:1.6.3'
+	implementation 'org.mapstruct:mapstruct-processor:1.6.3'
+	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb:4.0.0'
 
 	implementation 'dev.langchain4j:langchain4j-core:1.8.0'
 	implementation 'dev.langchain4j:langchain4j:1.8.0'
@@ -35,8 +38,9 @@ dependencies {
 	implementation 'dev.langchain4j:langchain4j-anthropic-spring-boot-starter:1.8.0-beta15'
 	implementation 'dev.langchain4j:langchain4j-embeddings-all-minilm-l6-v2:1.8.0-beta15'
 
+
 	compileOnly 'org.projectlombok:lombok'
-//	annotationProcessor 'org.projectlombok:lombok'
+	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
