--- a/agent-ai/build.gradle
+++ b/agent-ai/build.gradle
@@ -25,10 +25,9 @@ repositories {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-webmvc'
+	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.mapstruct:mapstruct:1.6.3'
-	implementation 'org.mapstruct:mapstruct-processor:1.6.3'
-	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb:4.0.0'
+	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
 
 	implementation 'dev.langchain4j:langchain4j-core:1.8.0'
 	implementation 'dev.langchain4j:langchain4j:1.8.0'
@@ -40,7 +39,9 @@ dependencies {
 
 
 	compileOnly 'org.projectlombok:lombok'
+	compileOnly 'org.mapstruct:mapstruct-processor:1.6.3'
 	annotationProcessor 'org.projectlombok:lombok'
+	annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'
 	testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
