--- a/agent-ai/build.gradle
+++ b/agent-ai/build.gradle
@@ -37,6 +37,7 @@ dependencies {
 	implementation 'dev.langchain4j:langchain4j-anthropic-spring-boot-starter:1.8.0-beta15'
 	implementation 'dev.langchain4j:langchain4j-embeddings-all-minilm-l6-v2:1.8.0-beta15'
 
+	implementation 'org.apache.pdfbox:pdfbox:3.0.6'
 
 	compileOnly 'org.projectlombok:lombok'
 	compileOnly 'org.mapstruct:mapstruct-processor:1.6.3'
